Fix the gap underneath full size orchid pics

--- a/project.styl
+++ b/project.styl
@@ -298,6 +298,8 @@
       display: none
     
     img
+      display: block
+      margin: 0
       z-index: 1
     
     p
